21st Commit - Created ManageUserController , updated changes in User and  finished User Table creation to using hibernate without Bcrypt Password.